Cleaned up code.

--- a/src/main/resources/Values.properties
+++ b/src/main/resources/Values.properties
@@ -1,8 +1,11 @@
-BASE_VALUE=30
-    # Minimum rating for a major league player
-INCREMENT_VALUE_CONTACT=0.0037
-    # Used to calculate contact rating
-INCREMENT_VALUE_POWER=0.00135
-    # Used to calculate power rating
+CONTACT_INTERVAL=0.0017
+CONTACT_MIN=.160
+
+POWER_INTERVAL=0.00127
+POWER_MIN=30
+
+SPEED_INTERVAL=0.081
+SPEED_MIN=22.3
+
 PROSPECT_MODIFIER=25
     # Subtracted from a general rating to produce a prospect rating
