Added fielding generator

--- a/src/main/resources/Values.properties
+++ b/src/main/resources/Values.properties
@@ -7,5 +7,11 @@ POWER_MIN=30
 SPEED_INTERVAL=0.081
 SPEED_MIN=22.3
 
+STEALING_INTERVAL=0.80
+STEALING_MIN=0.0
+
+FIELDING_INTERVAL=0.001
+FIELDING_MIN=0.900
+
 PROSPECT_MODIFIER=25
     # Subtracted from a general rating to produce a prospect rating
