Made minor tweaks, added Baserunning Aggressiveness and Clutch gens.

--- a/src/main/resources/Values.properties
+++ b/src/main/resources/Values.properties
@@ -4,11 +4,17 @@ CONTACT_MIN=.160
 POWER_INTERVAL=0.00127
 POWER_MIN=30
 
+CLUTCH_INTERVAL=0.0014
+CLUTCH_MIN=0.150
+
 SPEED_INTERVAL=0.081
 SPEED_MIN=22.3
 
 STEALING_INTERVAL=0.80
 STEALING_MIN=0.0
+
+BASERUNNING_AGGRESSIVENESS_INTERVAL=0.25
+BASERUNNING_AGGRESSIVENESS_MIN=0
 
 FIELDING_INTERVAL=0.001
 FIELDING_MIN=0.900
