Added Vision Generator (may have to use PA instead of AB in others)

--- a/src/main/resources/Values.properties
+++ b/src/main/resources/Values.properties
@@ -4,6 +4,9 @@ CONTACT_MIN=.160
 POWER_INTERVAL=0.00127
 POWER_MIN=30
 
+VISION_INTERVAL=0.1
+VISION_MIN=3.0
+
 CLUTCH_INTERVAL=0.0014
 CLUTCH_MIN=0.150
 
