Modified Vision Generator.  Added Discipline Generator.

--- a/src/main/resources/Values.properties
+++ b/src/main/resources/Values.properties
@@ -4,8 +4,11 @@ CONTACT_MIN=.160
 POWER_INTERVAL=0.00127
 POWER_MIN=30
 
-VISION_INTERVAL=0.1
-VISION_MIN=3.0
+VISION_INTERVAL=0.3
+VISION_MIN=7.0
+
+DISCIPLINE_INTERVAL=0.19
+DISCIPLINE_MIN=1.0
 
 CLUTCH_INTERVAL=0.0014
 CLUTCH_MIN=0.150
