Added Bunt Generator.

--- a/src/main/resources/Values.properties
+++ b/src/main/resources/Values.properties
@@ -13,6 +13,17 @@ DISCIPLINE_MIN=1.0
 CLUTCH_INTERVAL=0.0014
 CLUTCH_MIN=0.150
 
+BUNT_INTERVAL=0.75
+BUNT_MIN=0.0
+BUNT_MODIFIER_TIER1_THRESHOLD=10
+BUNT_MODIFIER_TIER2_THRESHOLD=7
+BUNT_MODIFIER_TIER3_THRESHOLD=4
+BUNT_MODIFIER_TIER4_THRESHOLD=0
+#BUNT_MODIFIER_TIER1_VALUE is 100% of given value
+BUNT_MODIFIER_TIER2_VALUE=0.70
+BUNT_MODIFIER_TIER3_VALUE=0.60
+BUNT_MODIFIER_TIER4_VALUE=0.50
+
 SPEED_INTERVAL=0.081
 SPEED_MIN=22.3
 
